k8s 20-37-49-793/uploadvideos.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploadvidoes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: uploadvidoes
  template:
    metadata:
      labels:
        app: uploadvidoes
    spec:
      containers:
      - name: uploadvidoes
        image: docker.io/jeshu911/uploadvideos
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
