k8s 20-37-49-793/uploadvideos.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uploadvideos
spec:
  selector:
    app: uploadvideos
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
